--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-icons": "^4.3.1",
+    "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2"
   }
 }
